@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 dd9d2fae08bd0bfc338177c9b39549cdc8b27e38 ChangeLog
+SHA1 cab654bf2e0db7305d00c821d189aa1b335f9d6f ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 78aa6e4b7c89f71de034c52a7441aa442236e996 META.yml
-SHA1 587ae8b0376156e2689ab46781a9ab177c0831ce MYMETA.json
-SHA1 de5f4585cbdefdd89c905f0f44cf22b3ea695a29 MYMETA.yml
-SHA1 bd4ea9053f2627282c9c3c97090896f66ea38b28 Makefile.PL
+SHA1 374edc3a4db7173a230e8622de754c9c77683903 META.yml
+SHA1 839365d0e2d9725793310c9df5282dadeaed21df MYMETA.json
+SHA1 2554878f60e8c016a4df8db067e0169a9c10a858 MYMETA.yml
+SHA1 b67108822297e3612c28e410f3b2d7876c2d3cd7 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 5472ee98248d12176af25a421ec397e4ec7f1920 lib/Net/FullAuto.pm
+SHA1 464c207cb715573529a601da959c3fc3ed5ef655 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,11 +56,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSmQNaAAoJEBa/9Pad787ESmMH/A7YWhGttFaJnf+p06+U/VYx
-yNP8q/GshvyluG5rjhAtsw8/a0mWCFOxng5udGPtbNb09Nuqti+m8K87M0oiRYvN
-JOtvQWZg8nvnEoOtP/yl9tmMxy6aZ/KJSd+Fgys9VZfMHsX4DL5pCzVsTulUjnvx
-fVxx9BRgyMm1Tk6cOVlppgBV6DXOd7gdbanJCuoQ8Uip/4i9SFhVA1Eb+dnEFMcO
-VO8MeYyNMjjWXOA2FLRMTPhOheuv3Lwx3ywE0srrUxP39ctbhaTzOYk3b7m0LYWn
-UxQZbEYEZK9mKFVUN7qenSveSpFuK/7lnyLzJ5qmHTODtN14s0e9eihn63xoC+o=
-=SvLu
+iQEcBAEBAgAGBQJSmRZ6AAoJEBa/9Pad787EEoEH/i6EEcdjHLJXVvCTk2486jSx
+aieo/N6RKkzWwIN/M8MxeEbdcA+fmyl7KeStVd3aL2WcthadKRwD0BUIrwZm3x2/
+JR1DX5zyMARSEIkclbUKOLTMVUB9W64aP3wD2QtJxjxmkfjHlY/vwN8d3LZwhZSd
+W8Cqzdm4Grk2k/zop746nQDe6ETVl2sqQnfi4h1tUOz+nzhi5UYJWJpr4176g782
+1ztM+yTvi/muKF3CmeppFHkBv7nSuwKHdkGrDZ/XYKT2h2T4whomA3+pLKX5B6im
+cE2e6HoYHc8nJGmUnljR12sGwOlzymBwC76+R2E0cAnxcWvzvO9YGcUp34ErM9w=
+=uH6q
 -----END PGP SIGNATURE-----
